tests/diag/bad-source-field.wisp
source c = cpu();
surface bar {
  widget clock {
    text = c.bogus;
  }
}
